<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse.imp</groupId>
	<artifactId>org.eclipse.imp.pdb.values.benchmarks</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<executions>
					<execution>
						<id>test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>
						-server
						-Xmx8g
						<!-- -XX:+PrintCompilation -->
						<!-- -verbose:gc -->
						<!-- -XX:+PrintGCDetails -->
						-XX:+HeapDumpOnOutOfMemoryError
						<!-- -Xloggc:loggc.txt -->				
						-XX:-BackgroundCompilation				
					</argLine>
					<includes>
						<include>**/Benchmark*</include>
					</includes>
				</configuration>
			</plugin>		
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.0.9</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.caliper</groupId>
			<artifactId>caliper</artifactId>
			<version>0.5-rc1</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.11</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb</artifactId>
			<version>0.2.1.qualifier</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb.values</artifactId>
			<version>0.3.2.qualifier</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb.values.persistent.clojure</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb.values.persistent.scala</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

</project>